--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2021"
 pkarr = {version="3.7.1", features=["full"]}
 tokio = { version = "1.44.2", features = ["full"] }
 tokio-rustls = "0.26.0"
-anyhow = "1.0.79"
-clap = { version = "4.5.1", features = ["derive"] }
+anyhow = "1.0.86"
+clap = { version = "4.5.8", features = ["derive"] }
 hex = "0.4.3"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 ed25519-dalek = "2.1.0"
+
+[dev-dependencies]
+reqwest = { version = "0.12.5", features = ["rustls-tls-native-roots"], default-features = false }
+portpicker = "0.1.1"
+once_cell = "1.19.0"
